--- a/src/components/Article/index.css
+++ b/src/components/Article/index.css
@@ -24,6 +24,12 @@
   margin-bottom: 10px;
 }
 
+.article-image {
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
 .article-back-button {
   color: #999;
   font-size: 15px;
